# escoe_workshop_labelling

./: LICENSE  README.md  pyproject.toml  requirements.txt
.cookiecutter/: config
docs/: conf.py  index.rst
escoe_workshop_labelling/: __init__.py
escoe_workshop_labelling/config/: logging.yaml
escoe_workshop_labelling/pipeline/backstage_process_data/: README.md  create_jobs_data.py  job_advert_cleaning.py  process_job_data_for_labelling.py
escoe_workshop_labelling/pipeline/run_argilla/: run_labelling.py  save_labelling.py
escoe_workshop_labelling/pipeline/train_ner/: apply_software_ner.py  spacy_format.py
